# ireland-osm-boundaries

./: .gitignore  Makefile  README.md  get_ded_boundaries.py  get_townland_boundaries.py  pyproject.toml  requirements.txt  shared.py
scripts/: get_ded_boundaries.py  get_townland_boundaries.py
