[project]
name = "ireland-osm-boundaries"
version = "0.1.0"
description = "Fetch electoral division boundaries from OpenStreetMap for each 1911 Irish county"
dependencies = [
  "geojson==3.1.0",
  "osm2geojson==0.2.4",
  "requests==2.31.0",
  "Shapely==2.0.3",
]

[build-system]
requires = ["setuptools", "wheel"]

[tool.setuptools]
packages = ["scripts"]
